--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile 'io.reactivex:rxkotlin:0.60.0'
     compile 'com.nvanbenschoten.rxsensor:rxsensor:1.1.1'
     compile 'pl.charmas.android:android-reactive-location:0.10@aar'
-    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    compile 'com.jakewharton.rxbinding:rxbinding-kotlin:0.4.0'
     compile 'com.github.pwittchen:reactivesensors:0.1.2'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
 }
