--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".computer.ComputerActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".computer.ComputerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,14 +22,11 @@
         </activity>
 
         <activity
-            android:exported="true"
             android:name=".settings.SettingsActivity"
-            android:parentActivityName=".computer.ComputerActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:exported="true"
+            android:parentActivityName=".computer.ComputerActivity" />
 
-        <activity
-            android:name=".about.AboutActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".about.AboutActivity" />
 
     </application>
 
