цветные темы сервис для сбора данных

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="me.ilich.vel">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".VelApp"
@@ -11,8 +12,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
+
         <activity android:name=".computer.ComputerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +24,15 @@
 
         <activity
             android:name=".settings.SettingsActivity"
-            android:exported="true"
+            android:label="@string/activity_settings"
             android:parentActivityName=".computer.ComputerActivity" />
 
-        <activity android:name=".about.AboutActivity" />
+        <activity
+            android:name=".about.AboutActivity"
+            android:label="@string/activity_about"
+            android:parentActivityName=".computer.ComputerActivity" />
+
+        <service android:name=".VelService" />
 
     </application>
 
