--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,15 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding-kotlin:0.4.0'
     compile 'com.github.pwittchen:reactivesensors:0.1.2'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.1@aar'
+
+    //region Logback & slf4j
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'com.github.tony19:logback-android-core:1.1.1-6'
+    compile('com.github.tony19:logback-android-classic:1.1.1-6') {
+        // workaround issue #73
+        exclude group: 'com.google.android', module: 'android'
+    }
+    //endregion
 }
 repositories {
     mavenCentral()
