--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,15 @@ dependencies {
         exclude group: 'com.google.android', module: 'android'
     }
     //endregion
+
+    //region dagger2
+    compile 'com.google.dagger:dagger:2.11-rc2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11-rc2'
+    compile 'com.google.dagger:dagger-android:2.11-rc2'
+    compile 'com.google.dagger:dagger-android-support:2.11-rc2' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11-rc2'
+    //endregion
+
 }
 repositories {
     mavenCentral()
