--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".computer.ComputerActivity"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme">
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,7 +27,6 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/activity_settings"
-            android:theme="@style/AppTheme"
             android:parentActivityName=".computer.ComputerActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -37,7 +36,15 @@
         <activity
             android:name=".about.AboutActivity"
             android:label="@string/activity_about"
-            android:parentActivityName=".computer.ComputerActivity" />
+            android:parentActivityName=".computer.ComputerActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".computer.ComputerActivity" />
+        </activity>
+
+        <activity
+            android:name=".debug.DebugActivity"
+            android:exported="true" />
 
         <service android:name=".VelService" />
 
