--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,13 +68,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile "com.android.support:appcompat-v7:$support_library"
+    compile "com.android.support:design:$support_library"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    compile 'com.google.android.gms:play-services-location:11.0.0'
+    compile "com.google.android.gms:play-services-location:$play_servicies"
     compile 'com.f2prateek.rx.preferences:rx-preferences:1.0.2'
 
     compile 'io.reactivex:rxjava:1.2.9'
