--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.2-3'
-    ext.anko_version = '0.10'
+    ext.kotlin_version = '1.1.3'
+    ext.anko_version = '0.10.1'
+    ext.support_library = '25.3.1'
+    ext.play_servicies = '11.0.1'
     repositories {
         jcenter()
     }
